[workspace]
members = [ "." ]

[package]
name = "selection_sort"
version = "0.1.0"
authors = ["David Johnson <djohnson.m@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dmjio/selection_sort"
description = "Selection sort algorithm"
readme = "README.md"

[dependencies]
quickcheck = "0.8"
